feat(shop): Agregada paginación a la tienda